// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConfig datasource with env var - ignoreEnvVarErrors 1`] = `
Object {
  "datasources": Array [
    Object {
      "activeProvider": "postgresql",
      "name": "db",
      "provider": "postgresql",
      "url": Object {
        "fromEnvVar": "SOMETHING-SOMETHING-1234",
        "value": null,
      },
    },
  ],
  "generators": Array [],
  "warnings": Array [],
}
`;

exports[`getConfig datasource with env var 1`] = `
Object {
  "datasources": Array [
    Object {
      "activeProvider": "postgresql",
      "name": "db",
      "provider": "postgresql",
      "url": Object {
        "fromEnvVar": "TEST_POSTGRES_URI_FOR_DATASOURCE",
        "value": "postgres://user:password@something:5432/db",
      },
    },
  ],
  "generators": Array [],
  "warnings": Array [],
}
`;

exports[`getConfig empty config 1`] = `
Object {
  "datasources": Array [
    Object {
      "activeProvider": "sqlite",
      "name": "db",
      "provider": "sqlite",
      "url": Object {
        "fromEnvVar": null,
        "value": "file:../hello.db",
      },
    },
  ],
  "generators": Array [],
  "warnings": Array [],
}
`;

exports[`getConfig with generator and datasource 1`] = `
Object {
  "datasources": Array [
    Object {
      "activeProvider": "sqlite",
      "name": "db",
      "provider": "sqlite",
      "url": Object {
        "fromEnvVar": null,
        "value": "file:dev.db",
      },
    },
  ],
  "generators": Array [
    Object {
      "binaryTargets": Array [
        Object {
          "fromEnvVar": null,
          "value": "native",
        },
      ],
      "config": Object {},
      "name": "gen",
      "output": null,
      "previewFeatures": Array [],
      "provider": Object {
        "fromEnvVar": null,
        "value": "fancy-provider",
      },
    },
  ],
  "warnings": Array [],
}
`;
